// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmazonAds.syncAudiencesToDSP Normalise and Hash personally-identifiable input provided with SHA-256 1`] = `
Object {
  "afterResponse": Array [
    [Function],
    [Function],
    [Function],
  ],
  "beforeRequest": Array [
    [Function],
  ],
  "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"CREATE\\",\\"hashedPII\\":[{\\"firstname\\":\\"44104fcaef8476724152090d6d7bd9afa8ca5b385f6a99d3c6cf36b943b9872d\\",\\"phone\\":\\"63af7d494c194a90e1cf1db5371c13f97db650161aa803e67182c0dbaf668c7b\\",\\"state\\":\\"92db9c574d420b2437b29d898d55604f61df6c17f5163e53337f2169dd70d38d\\",\\"email\\":\\"15b436489faf367dadf946cfe311d44b6621814e1aacc4f8acfdf0c29a068b11\\"}]}],\\"audienceId\\":379909525712777677}",
  "headers": Headers {
    Symbol(map): Object {
      "amazon-advertising-api-clientid": Array [
        "",
      ],
      "authorization": Array [
        "Bearer undefined",
      ],
      "content-type": Array [
        "application/vnd.amcaudiences.v1+json",
      ],
      "user-agent": Array [
        "Segment (Actions)",
      ],
    },
  },
  "method": "POST",
  "signal": AbortSignal {},
  "statsContext": Object {},
  "throwHttpErrors": true,
  "timeout": 10000,
}
`;

exports[`AmazonAds.syncAudiencesToDSP Should add user to audience when Event is Audience Entered 1`] = `
Object {
  "afterResponse": Array [
    [Function],
    [Function],
    [Function],
  ],
  "beforeRequest": Array [
    [Function],
  ],
  "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"CREATE\\",\\"hashedPII\\":[{}]}],\\"audienceId\\":379909525712777677}",
  "headers": Headers {
    Symbol(map): Object {
      "amazon-advertising-api-clientid": Array [
        "",
      ],
      "authorization": Array [
        "Bearer undefined",
      ],
      "content-type": Array [
        "application/vnd.amcaudiences.v1+json",
      ],
      "user-agent": Array [
        "Segment (Actions)",
      ],
    },
  },
  "method": "POST",
  "signal": AbortSignal {},
  "statsContext": Object {},
  "throwHttpErrors": true,
  "timeout": 10000,
}
`;

exports[`AmazonAds.syncAudiencesToDSP Should delete user from audience when Event is Audience Exited 1`] = `
Object {
  "afterResponse": Array [
    [Function],
    [Function],
    [Function],
  ],
  "beforeRequest": Array [
    [Function],
  ],
  "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"DELETE\\",\\"hashedPII\\":[{}]}],\\"audienceId\\":379909525712777677}",
  "headers": Headers {
    Symbol(map): Object {
      "amazon-advertising-api-clientid": Array [
        "",
      ],
      "authorization": Array [
        "Bearer undefined",
      ],
      "content-type": Array [
        "application/vnd.amcaudiences.v1+json",
      ],
      "user-agent": Array [
        "Segment (Actions)",
      ],
    },
  },
  "method": "POST",
  "signal": AbortSignal {},
  "statsContext": Object {},
  "throwHttpErrors": true,
  "timeout": 10000,
}
`;
